# Mynance

./: .gitignore  Makefile  README.md
.github/workflows/: terraform-apply.yaml  terraform-plan.yaml
budget-tracker/: .eslintrc  package-lock.json  package.json
budget-tracker/src/: fibi.ts  index.ts  max.ts
budget-tracker/src/scraping/: index.ts
budget-tracker/src/scraping/scrapers/: beinleumi.ts  max.ts  scraper.ts
budget-tracker/src/transactions/: scraper.ts  transaction.ts
infra/: main.tf
infra/.terraform/: environment  terraform.tfstate
infra/airflow/: docker-compose.yaml
masleka/: Pipfile  parse.ipynb
transactions-fetcher/: .prettierrc.yaml  Dockerfile  package-lock.json  package.json
transactions-fetcher/src/: index.ts
transactions-fetcher/src/scraping/: index.ts
transactions-fetcher/src/scraping/scrapers/: cal.ts  scraper.ts
transactions-fetcher/tx-analysis/: pyproject.toml  tx-analyze.ipynb
